--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -2,7 +2,7 @@ server:
   port: 9527
 spring:
   application:
-    name: MICROSERVICE-ZUUL-GATEWAY-DEV
+    name: application-zuul-dev
 eureka:
   client:
     service-url:
