--- a/application-product-test.yml
+++ b/application-product-test.yml
@@ -9,8 +9,8 @@ spring:
     username: root
     password: root
 mybatis-plus:
-  mapper-locations: classpath:cn/itsource/aigou/mapper/*Mapper.xml
-  type-aliases-package: cn.itsource.aigou.domain,cn.itsource.aigou.query
+  mapper-locations: classpath:org/yjq/aigou/mapper/*Mapper.xml
+  type-aliases-package: org.yjq.aigou.domain,org.yjq.aigou.query
 eureka:
   client:
     service-url:
