提交公共服务

--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -16,5 +16,7 @@ zuul:
     plat.path: /plat/**
     product.serviceId: aigou-product-dev #这个名字需要和消费者的名字对应 dev对应的就是dev  test对应的就是test
     product.path: /product/**
+    common.serviceId: aigou-common-dev #这个名字需要和消费者的名字对应 dev对应的就是dev  test对应的就是test
+    common.path: /common/**
   ignored-services: "*"
   prefix: "/services"
